# athreix-synapse

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: 01-architecture.md  02-event-model.md  03-database-schema.md  04-agent-adapters.md  05-security-model.md  06-ambient-detection.md  99-roadmap.md  README.md
npm/: README.md  install.js  package.json
synapse-cli/: Cargo.toml
synapse-cli/src/: dashboard.rs  main.rs  theme.rs  tui.rs
synapse-core/: Cargo.toml
synapse-core/src/: lib.rs  policy.rs  recap.rs  scan.rs
synapse-core/src/agents/: mod.rs
synapse-core/src/events/: mod.rs
synapse-core/src/explain/: mod.rs
synapse-core/src/snapshots/: mod.rs
synapse-core/src/store/: mod.rs
synapse-core/src/timemachine/: mod.rs
synapse-core/src/twin/: mod.rs
synapse-core/src/watcher/: mod.rs
