[package]
name = "synapse-cli"
version = "0.1.4"
edition = "2021"
description = "Synapse — terminal-native, fully-offline observability for AI coding agents."

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
synapse-core = { path = "../synapse-core" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.8"
vt100 = "0.15"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
fuzzy-matcher = "0.3"
arboard = "3"
