[package]
name = "synapse-core"
version = "0.1.4"
edition = "2021"
description = "Synapse engine — event store, snapshots, watcher, time machine, twin, explainability. No GUI, no network: fully offline."

[lib]
name = "synapse_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6.1"
notify-debouncer-full = "0.3"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
similar = "2"
sysinfo = "0.32"
